# github-languages-rs

./: Cargo.toml  README.md  build.rs  justfile  languages.yml
.github/: mosaic.toml
.github/scripts/: update-languages.mjs
.github/workflows/: auto-release.yaml  auto-release.yml  ci-security.yaml  ci.yaml  ci.yml  release.yaml  release.yml  update.yaml  update.yml
src/: generated.rs  lib.rs  macros.rs  main.rs
