[package]
name = "github-languages"
version = "1.0.2"
edition = "2021"
authors = ["Lucas Nørgård <lucasnrgaard@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/luxass/github-languages-rs"
repository = "https://github.com/luxass/github-languages-rs"
description = "All GitHub's supported languages"
license = "MIT"

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
prettyplease = "0.2.22"
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }

[dependencies]
once_cell = "1.19.0"
phf = { version = "0.13", features = ["macros"] }
